--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,289 +1,104 @@
-/* stylelint-disable CssSyntaxError */
 /* stylelint-disable rule-empty-line-before */
 body {
   margin: 0;
-  padding: 0;
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
 }
 
-.Calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: 706px;
-  -moz-column-count: 7;
-       column-count: 7;
-  gap: 1px;
-  padding: 10px;
-}
-
-.Calendar__day {
-  cursor: pointer;
-  box-sizing: border-box;
-  position: relative;
+html {
+  height: 100%;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(7 * 100px + 6px);
+  padding: 10px;
+  gap: 1px;
+  counter-reset: day-counter 0;
+}
+.calendar__day {
+  width: 100px;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
   background-color: #eee;
   border: 1px solid black;
-  height: 100px;
-  width: 100px;
-  transition: 0.5s;
+  display: flex;
+  box-sizing: border-box;
 }
-.Calendar__day-hover {
+.calendar__day::before {
+  counter-increment: day-counter;
+  content: counter(day-counter);
+}
+.calendar__day:hover {
+  cursor: pointer;
   background-color: #ffbfcb;
-  transform: translate(0, -20px);
+  transform: translateY(-20px);
+  transition: all 0.5s;
 }
-.Calendar__day:nth-child(1)::before {
-  content: "1";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-mon .calendar__day:nth-child(1) {
+  margin-left: calc(0 * (100px + 1px));
 }
-.Calendar__day:nth-child(2)::before {
-  content: "2";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-tue .calendar__day:nth-child(1) {
+  margin-left: calc(1 * (100px + 1px));
 }
-.Calendar__day:nth-child(3)::before {
-  content: "3";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-wed .calendar__day:nth-child(1) {
+  margin-left: calc(2 * (100px + 1px));
 }
-.Calendar__day:nth-child(4)::before {
-  content: "4";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-thu .calendar__day:nth-child(1) {
+  margin-left: calc(3 * (100px + 1px));
 }
-.Calendar__day:nth-child(5)::before {
-  content: "5";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-fri .calendar__day:nth-child(1) {
+  margin-left: calc(4 * (100px + 1px));
 }
-.Calendar__day:nth-child(6)::before {
-  content: "6";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-sat .calendar__day:nth-child(1) {
+  margin-left: calc(5 * (100px + 1px));
 }
-.Calendar__day:nth-child(7)::before {
-  content: "7";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--start-day-sun .calendar__day:nth-child(1) {
+  margin-left: calc(6 * (100px + 1px));
 }
-.Calendar__day:nth-child(8)::before {
-  content: "8";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--month-length-28 .calendar__day:nth-child(n + 29) {
+  display: none;
 }
-.Calendar__day:nth-child(9)::before {
-  content: "9";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--month-length-29 .calendar__day:nth-child(n + 30) {
+  display: none;
 }
-.Calendar__day:nth-child(10)::before {
-  content: "10";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
+  display: none;
 }
-.Calendar__day:nth-child(11)::before {
-  content: "11";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
+.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
+  display: none;
 }
-.Calendar__day:nth-child(12)::before {
-  content: "12";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(13)::before {
-  content: "13";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(14)::before {
-  content: "14";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(15)::before {
-  content: "15";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(16)::before {
-  content: "16";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(17)::before {
-  content: "17";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(18)::before {
-  content: "18";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(19)::before {
-  content: "19";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(20)::before {
-  content: "20";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(21)::before {
-  content: "21";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(22)::before {
-  content: "22";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(23)::before {
-  content: "23";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(24)::before {
-  content: "24";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(25)::before {
-  content: "25";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(26)::before {
-  content: "26";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(27)::before {
-  content: "27";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(28)::before {
-  content: "28";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(29)::before {
-  content: "29";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(30)::before {
-  content: "30";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar__day:nth-child(31)::before {
-  content: "31";
-  position: absolute;
-  text-align: center;
-  font-size: 30px;
-  color: black;
-}
-.Calendar--start-day-mon > .Calendar__day:first-child {
+
+.calendar--start-day--mon .calendar__day:first-child {
   margin-left: 1px;
 }
-.Calendar--start-day-tue > .Calendar__day:first-child {
+
+.calendar--start-day--tue .calendar__day:first-child {
   margin-left: 101px;
 }
-.Calendar--start-day-wed > .Calendar__day:first-child {
+
+.calendar--start-day--wed .calendar__day:first-child {
   margin-left: 202px;
 }
-.Calendar--start-day-thu > .Calendar__day:first-child {
+
+.calendar--start-day--thu .calendar__day:first-child {
   margin-left: 303px;
 }
-.Calendar--start-day-fri > .Calendar__day:first-child {
+
+.calendar--start-day--fri .calendar__day:first-child {
   margin-left: 404px;
 }
-.Calendar--start-day-sat > .Calendar__day:first-child {
+
+.calendar--start-day--sat .calendar__day:first-child {
   margin-left: 505px;
 }
-.Calendar--start-day-sun > .Calendar__day:first-child {
+
+.calendar--start-day--sun .calendar__day:first-child {
   margin-left: 606px;
-}
-.Calendar--month-length-28 :nth-child(n+29) {
-  display: none;
-}
-.Calendar--month-length-29 :nth-child(n+30) {
-  display: none;
-}
-.Calendar--month-length-30 :nth-child(n+31) {
-  display: none;
-}
-.Calendar--month-length-31 :nth-child(n+32) {
-  display: none;
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
